--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
+    "gulp-file-include": "^0.13.7",
     "gulp-minify-css": "^1.2.0",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.2.0",
